# mtg-nltk

./: .env  .gitignore  00.01-cards-sets.py  01-cards-ETL-no-NLP.ipynb  01-cards-ETL-token-nodes-edges-tables.ipynb  01-cards-ETL.ipynb  01-decks-ETL-no-NLP.ipynb  01-decks-ETL-no-NLP.py  01.01-cards-ETL-no-NLP.ipynb  01.01-cards-ETL-no-NLP.py  01.02-cards-ETL-token-nodes-edges-tables.ipynb  01.02-cards-ETL-token-nodes-edges-tables.py  02-cards-inout-graph-builder.ipynb  02-cards-inout-graph-builder.py  02-deck-graph-builder.ipynb  03-text-to-entity-path-builder.ipynb  03-text-to-entity-path-builder.py  03b-build_graph_of_selected_cards.py  04a_1_card_power.py  04b_2_card_sinergy.py  04c_ga_for_deck_building.py  05_export_to_parquet.py  LICENSE  README.md  a_create_cards_database.py  b_enhance_cards_no_nlp.py  c_enhance_cards_with_nlp.py  card_power.py  config.py  cytoscape_visual.cys  d_build_individual_cards_graph.py  deck-analysis.pbix  e_build_text_to_entity_graphs.py  functions.py  gephi_view.gephi  learning01.ipynb  load_decks_into_database.py  plot_pyvis.py  prefect_flow_deck_graph_functions.py  prefect_flows.py  (+4 more)
decks/: Antonio Perez's Mono-Green Tron.txt  Brian Kinnell's White-Blue Control.txt  Jose David Marzuca Lozano's Mardu Pyromancer.txt  Masahide Moriyama’s Black-Red Midrange.txt  Matthew Nass's Hardened Scales Affinity.txt  Ondřej Stráský's Bant Spirits.txt  William Courson's Five-Color Humans.txt  Xu Fei's Tron.txt  create_images_for_printing.py  deck-largefull-on-kozilek.txt  kiss-from-a-rose-20210213-194412.txt  oloro.txt  rotation-proof.txt  untitled.txt
(+83 files in other folders)
