[tool.poetry]
name = "mtg-nltk"
version = "0.1.0"
description = ""
authors = ["Pedro Viana <pedrovgp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.2"
python-slugify = "^5.0.2"
tqdm = "^4.60.0"
networkx = "^2.5.1"
SQLAlchemy = "^1.4.13"
prefect = {extras = ["viz"], version = "^0.14.17"}
psycopg2-binary = "^2.8.6"
beautifulsoup4 = "^4.9.3"
spacy = "^2.3"
pygraphviz = "^1.7"
streamlit = "^0.81.1"
deap = "^1.3.1"
pyvis = "^0.1.9"
opencv-python = "^4.5.3"
requests-cache = "^0.8.1"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
ipykernel = "^5.5.4"
autopep8 = "^1.5.7"
plotly = "^5.0.0"
pytest = "^6.2.4"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
